<resources>
    <string name="app_name">Assignment01</string>
    <string name="Bill_Value">Bill Value</string>
    <string name="enter_bill_value_hint">Enter bill value</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="custom_percent">Custom</string>
    <string name="tip_percent">Tip %:</string>
    <string name="custom_seek">Custom %:</string>
    <string name="reset_tip">RESET</string>
    <string name="calculate_tip">CALCULATE</string>
    <string name="tip_calculated">Tip:</string>
    <string name="total_tip">"Total: "</string>
    <string name="tip_default">Tip: 0.00</string>
    <string name="total_default">Total: 0.00</string>
    <string name="default_percentage">25%</string>
</resources>